force-app/main/default/objects/Amount_History__c/Amount_History__c.object-meta.xml
<CustomObject>
    <label>Amount History</label>
    <nameField>
        <label>Amount History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Amount History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>