force-app/main/default/objects/Amount_History__c/fields/Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Name__c</fullName>
    <label>Client</label>
    <referenceTo>Clients__c</referenceTo>
    <relationshipLabel>Amount History</relationshipLabel>
    <relationshipName>Amount_History</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>