force-app/main/default/objects/Amount_History__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Amount History</relationshipLabel>
    <relationshipName>Amount_History</relationshipName>
    <type>Lookup</type>
</CustomField>