force-app/main/default/objects/Amount_History__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment</label>
    <referenceTo>Payment__c</referenceTo>
    <relationshipLabel>Amount History</relationshipLabel>
    <relationshipName>Amount_History</relationshipName>
    <type>Lookup</type>
</CustomField>